# eg

./: .gitignore
R/: least-squares.R
c/: count-lines.c  cuil.c  files-in-dir.c  get-dirs-with-git.c  hidden-files-at-subdirs.c  word-htable.c  word-table.cpp  word-ttable.c
c/bufferoverflow/: strcpy-vulnerabilidad.c
c/getopts/: getopts.c
c/gmplib/: add.c  expt.c  n-primes.c  primes-up-to.c  probably-prime.c  read-nums.c
c/networks/: client-beej.c  client-tanen.c  server-beej.c  server-tanen.c
c/numbers/: strtoull.c
c/pthreads/: Makefile  count-lines.c
c/rand/: Makefile  librandbytes.h  print-bytes.c  print-bytes.h  random-bytes.c  random-bytes.h
c/search/: Makefile  dic-arbol.c  dic-hash.c  hash-trad-wrd.c  hash-trad.c  (+4 more)
cmake/: WithX11Package.txt
cpp/boost/asio/: CMakeLists.txt
cpp/boost/asio/tcp/: blocking-tcp-echo-client.cpp  blocking-tcp-echo-server.cpp  echo-client2.cpp  echo-server2.cpp
cpp/containers/: CMakeLists.txt  Makefile  cpl.lz  list.hpp  lista.hpp  node.hpp  tlista0.cpp  tlista1.cpp  vector.hpp
cpp/containers/list/: CMakeLists.txt  list.hpp
cpp/containers/list/tests/: tlist0.cpp  tlist1.cpp
cpp/containers/tests/: t01-empty-vector-must-have-same-begin-end.cpp  t02-nonempty-vector-must-have-diff-begin-end.cpp  t03-vector-with-elements.cpp  t04-vector-after-poping-must-be-empty.cpp  t05-after-pushing-back-must-be-correct.cpp  tests.hpp  tlist0.cpp  tlist1.cpp  tvector.cpp  tvector1.cpp  tvector2.cpp
cpp/containers/vector/: CMakeLists.txt  Makefile
cpp/containers/vector/tests/: t01-empty-vector-must-have-same-begin-end.cpp  t02-nonempty-vector-must-have-diff-begin-end.cpp  t03-vector-with-elements.cpp  t04-vector-after-poping-all-must-be-empty.cpp  t05-after-pushing-back-must-be-correct.cpp  t06-pop-back-with-resize-must-copy.cpp  tests.hpp
cpp/ranges/hw/: CMakeLists.txt  accumulate_ints.cpp  foo.cpp  hw.cpp
elisp/: egrep-thread.el  egrep.el  replace-regexp.el  replace-string.el  txt-to-pdf.el  txt2pdf.el
flex/: .gitignore  Makefile  c-comments.l  cpp-comments.l  less-whitespace.l  username.l
guile/: acronimo.scm  argv.scm  command-line.scm  conjunto.scm  for-each.scm  get-http.scm  getopt.scm  goedel.scm  hw.scm  named-let.scm  prime-factors.scm  slang.scm  string-number.scm  tmp.scm  wget.scm
include/: do-words.h  eg-result.h  eg-str.h  lambda.h  string-table.h
lambda/: Makefile  main.c
python/: arbol.py  contar-palabras.py  grafos-aleatorios.py
rand-ascii-words/: main.c  makefile
src/: .do-words.c.swp  .eg-str.c.swp  .string-table.c.swp  do-words.c  eg-result.c  eg-str.c  string-table.c
table/: .main.c.swp  Makefile  foo  main.c  ver-unordered-map.c
word-freqs/: .Makefile.swp  .ver-fgets.c.swp  Makefile  bar  debug.c  diffout.sh  fbar  foo  foobar  makefile  read  test.c  timerun.sh  ver-cin.cpp  ver-fgets.c  ver-getline.c  ver-read.c  ver-split.py  ver-words.hs
zig/: .gitignore  cat.zig  wc.zig
(+138 files in other folders)
